hphp/test/zend/good/ext/curl/tests/bug63363.php.skipif
<?php
if (!extension_loaded("curl")) {
        exit("skip curl extension not loaded");
}
$curl_version = curl_version();
if ($curl_version['version_number'] >= 0x071c01) {
        exit("skip: test valid for libcurl < 7.28.1");
}
?>